# snova

./: Cargo.toml  README.md
.github/workflows/: ci.yml
defs/: builtin.toml
src/: builtin.rs  cmd.rs  dynfmt.rs  main.rs  parser.rs  view.rs
