[package]
name = "snova"
version = "0.1.0"
authors = ["Roman Zaynetdinov <roman@zaynetro.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5"
anyhow = "1.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
